--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     @font-face {
@@ -11,25 +12,20 @@
       src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/22228/SNAP____.TTF') format('truetype');
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
+      margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: url('https://wallpaperaccess.com/full/5651991.jpg') no-repeat center center fixed;
+      background: url('https://images.unsplash.com/photo-1607083201397-3d46cf4b0131') no-repeat center center fixed;
       background-size: cover;
-      color: #000;
+      color: #fff;
     }
 
     header {
-      background-color: rgba(217, 4, 41, 0.9);
-      padding: 15px 20px;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 10px 20px;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
       flex-wrap: wrap;
       position: sticky;
       top: 0;
@@ -40,8 +36,8 @@
       font-family: 'SnapITC', sans-serif;
       font-size: 32px;
       font-weight: bold;
-      color: white;
-      text-shadow: 3px 3px 0 #000, -1px -1px 0 #fff;
+      color: #fff;
+      text-shadow: 2px 2px 5px #f00;
     }
 
     .search-bar {
@@ -53,104 +49,94 @@
     .search-bar input {
       width: 60%;
       padding: 10px;
-      border-radius: 20px;
+      border-radius: 5px;
       border: none;
       outline: none;
       font-size: 16px;
     }
 
-    .icons {
+    .tabs {
       display: flex;
-      gap: 15px;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
     }
 
-    .icons a {
-      color: white;
-      font-size: 24px;
+    .tabs a {
+      color: #fff;
       text-decoration: none;
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .icons a:hover {
-      transform: scale(1.2);
-    }
-
-    .nav-categories {
-      background-color: rgba(255, 255, 255, 0.95);
-      text-align: center;
-      padding: 10px 0;
       font-weight: bold;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 6px 12px;
+      border-radius: 8px;
+      transition: background 0.3s ease;
     }
 
-    .nav-categories a {
-      margin: 0 15px;
-      color: #d90429;
-      text-decoration: none;
-      font-size: 14px;
+    .tabs a:hover {
+      background: #ff0055;
     }
 
     .hero {
       text-align: center;
-      padding: 50px 20px 20px;
-      color: #fff;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-      animation: fadeIn 2s ease-out;
+      padding: 60px 20px 20px;
     }
 
     .hero h1 {
-      font-size: 48px;
-      margin-bottom: 10px;
+      font-size: 42px;
+      color: #fff;
+      font-family: 'SnapITC', sans-serif;
+      text-shadow: 3px 3px 5px black;
     }
 
     .hero p {
-      font-size: 20px;
-    }
-
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
+      font-size: 18px;
+      margin-top: 10px;
+      color: #ddd;
     }
 
     .product-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 20px;
-      padding: 20px;
+      padding: 30px;
     }
 
     .product {
-      background: rgba(255,255,255,0.9);
-      border-radius: 10px;
+      background: rgba(0,0,0,0.6);
+      border: 1px solid #444;
       text-align: center;
-      padding: 15px;
-      transition: 0.3s;
+      padding: 10px;
+      border-radius: 10px;
+      transition: transform 0.3s;
     }
 
     .product:hover {
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-      transform: scale(1.03);
+      transform: scale(1.05);
     }
 
     .product img {
-      width: 100%;
+      max-width: 100%;
       height: auto;
-      border-radius: 10px;
     }
 
     footer {
-      background:#d90429;
-      color:white;
-      text-align:center;
-      padding:15px 0;
-      margin-top:20px;
+      background: rgba(0, 0, 0, 0.8);
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 20px;
     }
 
-    .about-section {
-      background-color: rgba(255,255,255,0.95);
-      padding: 30px;
-      margin: 30px 10px;
+    #about {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 20px;
+      margin: 20px;
       border-radius: 10px;
-      animation: fadeIn 1s ease-in-out;
+    }
+
+    #about h2 {
+      text-align: center;
+      color: #ff0055;
     }
 
     @media screen and (max-width: 768px) {
@@ -164,73 +150,55 @@
   <header>
     <div class="logo">FA-Tshirt</div>
     <div class="search-bar">
-      <input type="text" placeholder="Search for t-shirts..." />
-    </div>
-    <div class="icons">
-      <a href="#">❤️</a>
-      <a href="#">🛒</a>
-      <a href="#">👤</a>
+      <input type="text" placeholder="Search your favorite style...">
     </div>
   </header>
 
-  <nav class="nav-categories">
+  <div class="tabs">
     <a href="#men">Men</a>
     <a href="#women">Women</a>
     <a href="#kids">Kids</a>
     <a href="#about">About</a>
-  </nav>
+  </div>
 
   <section class="hero">
     <h1>Welcome to FA-Tshirt</h1>
-    <p>Style that speaks your vibe — for Men, Women & Kids</p>
+    <p>Trendy. Bold. Affordable — Your next favorite tee awaits!</p>
   </section>
 
-  <section class="product-grid" id="men">
+  <section class="product-grid">
     <div class="product">
-      <img src="https://via.placeholder.com/250x300?text=Round+Neck+Tee" alt="Tshirt 1">
-      <h3>Men's Round Neck Tee</h3>
+      <img src="https://via.placeholder.com/200" alt="Tshirt 1">
+      <h3>Anime Drip</h3>
       <p>₹299</p>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/250x300?text=Oversized+Drop+Shoulder" alt="Tshirt 2">
-      <h3>Drop Shoulder Tee</h3>
+      <img src="https://via.placeholder.com/200" alt="Tshirt 2">
+      <h3>Samurai Shade</h3>
       <p>₹349</p>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/250x300?text=Street+Style" alt="Tshirt 3">
-      <h3>Street Style Tee</h3>
+      <img src="https://via.placeholder.com/200" alt="Tshirt 3">
+      <h3>Gojo Mode</h3>
       <p>₹399</p>
     </div>
-  </section>
-
-  <section class="product-grid" id="women">
     <div class="product">
-      <img src="https://via.placeholder.com/250x300?text=Women's+Tee+1" alt="Tshirt 4">
-      <h3>Women's Casual Tee</h3>
+      <img src="https://via.placeholder.com/200" alt="Tshirt 4">
+      <h3>Uzumaki Swag</h3>
       <p>₹279</p>
     </div>
   </section>
 
-  <section class="product-grid" id="kids">
-    <div class="product">
-      <img src="https://via.placeholder.com/250x300?text=Kids+Tshirt" alt="Tshirt 5">
-      <h3>Kids Printed Tee</h3>
-      <p>₹249</p>
-    </div>
-  </section>
-
-  <section class="about-section" id="about">
+  <section id="about">
     <h2>About FA-Tshirt</h2>
-    <p>FA-Tshirt isn't just a brand, it's a dream. A dream of a simple guy who wanted to make high-quality, stylish, and affordable fashion accessible to everyone — especially those who don’t have a huge budget but deserve to look their best.
-    <br><br>
-    Starting from scratch, every design is made with passion, keeping in mind the real people and their real stories. FA-Tshirt is for every youth out there hustling with a fire inside.
-    <br><br>
-    Your support builds this dream. One t-shirt at a time.
+    <p>
+      FA-Tshirt is not just a clothing brand. It’s my dream, my passion, and my mission — to bring affordable, bold, and stylish designs to every youth in India.
+      From starting with zero to building something iconic, every design tells a story of hustle and dreams. Join this journey.
     </p>
   </section>
 
   <footer>
-    © 2025 FA-Tshirt | All rights reserved.
+    &copy; 2025 FA-Tshirt | Made with ❤️ for dreamers
   </footer>
 </body>
 </html>
