--- a/index.html
+++ b/index.html
@@ -4,201 +4,192 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
-  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    @font-face {
-      font-family: 'SnapITC';
-      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/22228/SNAP____.TTF') format('truetype');
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
     body {
-      margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: url('https://images.unsplash.com/photo-1607083201397-3d46cf4b0131') no-repeat center center fixed;
+      background: url('https://wallpapercave.com/wp/wp5128415.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
     }
 
     header {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 10px 20px;
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 15px 30px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      flex-wrap: wrap;
+      align-items: center;
       position: sticky;
       top: 0;
       z-index: 1000;
+      animation: fadeDown 1s ease;
+    }
+
+    @keyframes fadeDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .logo {
-      font-family: 'SnapITC', sans-serif;
       font-size: 32px;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 2px 2px 5px #f00;
+      font-weight: 700;
+      color: #e63946;
+      text-shadow: 2px 2px 0 #000;
     }
 
-    .search-bar {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-    }
-
-    .search-bar input {
-      width: 60%;
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-
-    .tabs {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
-
-    .tabs a {
-      color: #fff;
+    .nav-links a {
+      color: white;
       text-decoration: none;
+      margin: 0 15px;
       font-weight: bold;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 6px 12px;
-      border-radius: 8px;
-      transition: background 0.3s ease;
+      transition: color 0.3s ease;
     }
 
-    .tabs a:hover {
-      background: #ff0055;
+    .nav-links a:hover {
+      color: #ff6b6b;
     }
 
     .hero {
       text-align: center;
-      padding: 60px 20px 20px;
+      padding: 100px 20px;
+      background: rgba(0,0,0,0.5);
+      animation: fadeUp 1s ease;
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .hero h1 {
-      font-size: 42px;
-      color: #fff;
-      font-family: 'SnapITC', sans-serif;
-      text-shadow: 3px 3px 5px black;
+      font-size: 48px;
+      margin-bottom: 20px;
     }
 
     .hero p {
-      font-size: 18px;
-      margin-top: 10px;
-      color: #ddd;
+      font-size: 20px;
     }
 
-    .product-grid {
+    .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 20px;
-      padding: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      padding: 40px;
+      background: rgba(0,0,0,0.7);
     }
 
     .product {
-      background: rgba(0,0,0,0.6);
-      border: 1px solid #444;
-      text-align: center;
-      padding: 10px;
+      background: #fff;
+      color: #000;
       border-radius: 10px;
-      transition: transform 0.3s;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .product:hover {
       transform: scale(1.05);
+      box-shadow: 0 0 20px #000;
     }
 
     .product img {
-      max-width: 100%;
-      height: auto;
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+
+    .product-info {
+      padding: 15px;
+      text-align: center;
+    }
+
+    .product-info h3 {
+      margin-bottom: 10px;
+    }
+
+    .product-info p {
+      margin-bottom: 10px;
+    }
+
+    .buy-btn {
+      background-color: #e63946;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+
+    .buy-btn:hover {
+      background-color: #d90429;
     }
 
     footer {
       background: rgba(0, 0, 0, 0.8);
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 20px;
-    }
-
-    #about {
-      background: rgba(0, 0, 0, 0.8);
       padding: 20px;
-      margin: 20px;
-      border-radius: 10px;
-    }
-
-    #about h2 {
       text-align: center;
-      color: #ff0055;
-    }
-
-    @media screen and (max-width: 768px) {
-      .search-bar input {
-        width: 90%;
-      }
+      color: white;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
-    <div class="search-bar">
-      <input type="text" placeholder="Search your favorite style...">
-    </div>
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
-
-  <div class="tabs">
-    <a href="#men">Men</a>
-    <a href="#women">Women</a>
-    <a href="#kids">Kids</a>
-    <a href="#about">About</a>
-  </div>
 
   <section class="hero">
     <h1>Welcome to FA-Tshirt</h1>
-    <p>Trendy. Bold. Affordable — Your next favorite tee awaits!</p>
+    <p>Trendy | Comfortable | Affordable</p>
   </section>
 
-  <section class="product-grid">
+  <section class="products" id="products">
     <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Tshirt 1">
-      <h3>Anime Drip</h3>
-      <p>₹299</p>
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <div class="product-info">
+        <h3>Black Round Neck</h3>
+        <p>₹299</p>
+        <button class="buy-btn" onclick="addToCart('Black Round Neck')">Add to Cart</button>
+      </div>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Tshirt 2">
-      <h3>Samurai Shade</h3>
-      <p>₹349</p>
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <div class="product-info">
+        <h3>White Graphic Tee</h3>
+        <p>₹349</p>
+        <button class="buy-btn" onclick="addToCart('White Graphic Tee')">Add to Cart</button>
+      </div>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Tshirt 3">
-      <h3>Gojo Mode</h3>
-      <p>₹399</p>
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <div class="product-info">
+        <h3>Red Street Style</h3>
+        <p>₹399</p>
+        <button class="buy-btn" onclick="addToCart('Red Street Style')">Add to Cart</button>
+      </div>
     </div>
-    <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Tshirt 4">
-      <h3>Uzumaki Swag</h3>
-      <p>₹279</p>
-    </div>
-  </section>
-
-  <section id="about">
-    <h2>About FA-Tshirt</h2>
-    <p>
-      FA-Tshirt is not just a clothing brand. It’s my dream, my passion, and my mission — to bring affordable, bold, and stylish designs to every youth in India.
-      From starting with zero to building something iconic, every design tells a story of hustle and dreams. Join this journey.
-    </p>
   </section>
 
   <footer>
-    &copy; 2025 FA-Tshirt | Made with ❤️ for dreamers
+    &copy; 2025 FA-Tshirt. All rights reserved.
   </footer>
+
+  <script>
+    function addToCart(productName) {
+      alert(productName + " added to cart!");
+    }
+  </script>
 </body>
 </html>
