--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>FA-Tshirt</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    @font-face {
+      font-family: 'SnapITC';
+      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/14657/SNAP____.TTF') format('truetype');
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -37,11 +42,16 @@
     }
 
     .logo {
+      font-family: 'SnapITC', cursive;
       font-size: 32px;
       font-weight: 700;
-      font-family: 'Snap ITC', cursive;
       color: #e63946;
-      text-shadow: 2px 2px 4px #000;
+      text-shadow: 2px 2px 0 #000;
+    }
+
+    .nav-links {
+      display: flex;
+      align-items: center;
     }
 
     .nav-links a {
@@ -56,23 +66,25 @@
       color: #ff6b6b;
     }
 
-    .search-bar {
-      margin: 10px auto;
-      text-align: center;
+    .login-btn {
+      background-color: transparent;
+      color: white;
+      border: 2px solid white;
+      padding: 6px 12px;
+      margin-left: 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
 
-    .search-bar input {
-      padding: 10px;
-      width: 60%;
-      max-width: 400px;
-      border: none;
-      border-radius: 20px;
-      font-size: 16px;
+    .login-btn:hover {
+      background-color: #fff;
+      color: #000;
     }
 
     .hero {
       text-align: center;
-      padding: 100px 20px 40px;
+      padding: 100px 20px;
       background: rgba(0,0,0,0.5);
       animation: fadeUp 1s ease;
     }
@@ -84,32 +96,11 @@
 
     .hero h1 {
       font-size: 48px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
     .hero p {
       font-size: 20px;
-    }
-
-    .categories {
-      text-align: center;
-      margin-top: 10px;
-    }
-
-    .categories span {
-      margin: 0 10px;
-      background: #fff;
-      color: #000;
-      padding: 5px 15px;
-      border-radius: 20px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .categories span:hover {
-      background: #ff6b6b;
-      color: #fff;
     }
 
     .products {
@@ -166,24 +157,6 @@
       background-color: #d90429;
     }
 
-    #about {
-      padding: 60px 30px;
-      background: rgba(0, 0, 0, 0.6);
-      text-align: center;
-    }
-
-    #about h2 {
-      font-size: 36px;
-      margin-bottom: 20px;
-    }
-
-    #about p {
-      max-width: 800px;
-      margin: auto;
-      font-size: 18px;
-      line-height: 1.6;
-    }
-
     footer {
       background: rgba(0, 0, 0, 0.8);
       padding: 20px;
@@ -201,21 +174,13 @@
       <a href="#products">Products</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
+      <button class="login-btn" onclick="openLogin()">Login / Sign Up</button>
     </nav>
   </header>
-
-  <div class="search-bar">
-    <input type="text" placeholder="Search for T-shirts...">
-  </div>
 
   <section class="hero">
     <h1>Welcome to FA-Tshirt</h1>
     <p>Trendy | Comfortable | Affordable</p>
-    <div class="categories">
-      <span>Men</span>
-      <span>Women</span>
-      <span>Kids</span>
-    </div>
   </section>
 
   <section class="products" id="products">
@@ -245,11 +210,6 @@
     </div>
   </section>
 
-  <section id="about">
-    <h2>About FA-Tshirt</h2>
-    <p>FA-Tshirt is not just a clothing brand, it's a dream turned reality. Born from humble beginnings and a burning passion for creativity, FA-Tshirt aims to deliver affordable yet stylish wear for everyone. Our mission is to make fashion accessible while keeping it uniquely expressive. Whether you're a student, an artist, or a dreamer — there's a tee for every story here.</p>
-  </section>
-
   <footer>
     &copy; 2025 FA-Tshirt. All rights reserved.
   </footer>
@@ -257,6 +217,10 @@
   <script>
     function addToCart(productName) {
       alert(productName + " added to cart!");
+    }
+
+    function openLogin() {
+      alert("Login / Sign Up functionality coming soon!");
     }
   </script>
 </body>
