--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bahnschrift&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-    
+    @font-face {
+      font-family: 'SnapITC';
+      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/12192/SnapITC.woff') format('woff');
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -15,7 +18,7 @@
     }
 
     body {
-      font-family: 'Snap ITC', 'Roboto', sans-serif;
+      font-family: 'Bahnschrift', sans-serif;
       background: url('https://wallpapercave.com/wp/wp5128415.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
@@ -40,39 +43,51 @@
 
     .logo {
       font-size: 32px;
+      font-family: 'SnapITC', cursive;
       font-weight: 700;
       color: #e63946;
       text-shadow: 2px 2px 0 #000;
-      font-family: 'Snap ITC';
     }
 
-    .nav-left, .nav-right {
+    .nav-links {
       display: flex;
+      gap: 15px;
       align-items: center;
     }
 
-    .nav-links a, .category-links a {
+    .nav-links a {
       color: white;
       text-decoration: none;
-      margin: 0 10px;
       font-weight: bold;
       transition: color 0.3s ease;
-      font-size: 16px;
     }
 
-    .nav-links a:hover, .category-links a:hover {
+    .nav-links a:hover {
       color: #ff6b6b;
     }
 
     .search-bar {
-      margin: 0 20px;
+      margin: 10px auto 0;
+      text-align: center;
     }
 
     .search-bar input {
-      padding: 5px 10px;
-      border-radius: 5px;
+      padding: 8px;
+      width: 40%;
+      border-radius: 20px;
       border: none;
       outline: none;
+    }
+
+    .category-links {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    .category-links a {
+      margin: 0 10px;
+      color: #fff;
+      text-decoration: none;
     }
 
     .hero {
@@ -94,12 +109,6 @@
 
     .hero p {
       font-size: 20px;
-    }
-
-    .category-links {
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 10px;
     }
 
     .products {
@@ -163,27 +172,32 @@
       color: white;
       margin-top: 20px;
     }
+
+    .login-btn {
+      color: #fff;
+      background: transparent;
+      border: 1px solid #fff;
+      padding: 6px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <header>
-    <div class="nav-left">
-      <div class="logo">FA-Tshirt</div>
-      <nav class="nav-links">
-        <a href="#">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
-    <div class="nav-right">
-      <div class="search-bar">
-        <input type="text" placeholder="Search...">
-      </div>
-      <button class="buy-btn" onclick="loginPopup()">Login / Sign Up</button>
-    </div>
+    <div class="logo">FA-Tshirt</div>
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <button class="login-btn" onclick="alert('Login/Signup Coming Soon!')">Login / Sign Up</button>
   </header>
 
+  <div class="search-bar">
+    <input type="text" placeholder="Search your style...">
+  </div>
   <div class="category-links">
     <a href="#">Men</a>
     <a href="#">Women</a>
@@ -220,11 +234,22 @@
         <button class="buy-btn" onclick="addToCart('Red Street Style')">Add to Cart</button>
       </div>
     </div>
-  </section>
-
-  <section class="hero" id="about">
-    <h1>About FA-Tshirt</h1>
-    <p>Ek sapna jo Delhi ki galiyon se shuru hua. FA-Tshirt sirf ek brand nahi, ek junoon hai jo har ek youth ko fashionable aur comfortable banane ka irada rakhta hai. Aapka support hi hamari taqat hai. Aao, milke banaye FA-Tshirt ko India ka sabse bada fashion naam!</p>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1556905055-8f358a7a47b2?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
+      <div class="product-info">
+        <h3>Urban Style</h3>
+        <p>₹379</p>
+        <button class="buy-btn" onclick="addToCart('Urban Style')">Add to Cart</button>
+      </div>
+    </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1520975910015-ecf1664f2b8f?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
+      <div class="product-info">
+        <h3>Classic Blue Tee</h3>
+        <p>₹329</p>
+        <button class="buy-btn" onclick="addToCart('Classic Blue Tee')">Add to Cart</button>
+      </div>
+    </div>
   </section>
 
   <footer>
@@ -234,10 +259,6 @@
   <script>
     function addToCart(productName) {
       alert(productName + " added to cart!");
-    }
-
-    function loginPopup() {
-      alert("Login / Sign Up functionality coming soon!");
     }
   </script>
 </body>
