--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
   <link href="https://fonts.googleapis.com/css2?family=Bahnschrift&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
-    @font-face {
-      font-family: 'SnapITC';
-      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/12192/SnapITC.woff') format('woff');
-    }
-
     * {
       margin: 0;
       padding: 0;
@@ -43,16 +39,23 @@
 
     .logo {
       font-size: 32px;
-      font-family: 'SnapITC', cursive;
       font-weight: 700;
+      font-family: 'Snap ITC', cursive;
       color: #e63946;
       text-shadow: 2px 2px 0 #000;
     }
 
+    .nav-container {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+    }
+
     .nav-links {
       display: flex;
-      gap: 15px;
       align-items: center;
+      gap: 20px;
+      margin-right: 40px;
     }
 
     .nav-links a {
@@ -66,28 +69,39 @@
       color: #ff6b6b;
     }
 
-    .search-bar {
-      margin: 10px auto 0;
-      text-align: center;
+    .searchbar {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
-    .search-bar input {
-      padding: 8px;
-      width: 40%;
-      border-radius: 20px;
+    .searchbar input {
+      padding: 5px 10px;
+      border-radius: 5px;
       border: none;
       outline: none;
+      width: 200px;
     }
 
-    .category-links {
-      text-align: center;
-      margin-top: 10px;
+    .category-filters {
+      margin-top: 5px;
+      display: flex;
+      gap: 10px;
     }
 
-    .category-links a {
-      margin: 0 10px;
-      color: #fff;
-      text-decoration: none;
+    .category-filters span {
+      background-color: white;
+      color: black;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .icons {
+      display: flex;
+      align-items: center;
+      gap: 20px;
     }
 
     .hero {
@@ -172,37 +186,32 @@
       color: white;
       margin-top: 20px;
     }
-
-    .login-btn {
-      color: #fff;
-      background: transparent;
-      border: 1px solid #fff;
-      padding: 6px 12px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
-    <nav class="nav-links">
-      <a href="#">Home</a>
-      <a href="#products">Products</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
-    <button class="login-btn" onclick="alert('Login/Signup Coming Soon!')">Login / Sign Up</button>
+    <div class="nav-container">
+      <nav class="nav-links">
+        <a href="#">Home</a>
+        <a href="#products">Products</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <div class="icons">
+        <a href="#login" style="color: white;"><i class="fas fa-user"></i> Login</a>
+        <a href="#cart" style="color: white;"><i class="fas fa-shopping-cart"></i></a>
+      </div>
+    </div>
+    <div class="searchbar">
+      <input type="text" placeholder="Search...">
+      <div class="category-filters">
+        <span>Men</span>
+        <span>Women</span>
+        <span>Kids</span>
+      </div>
+    </div>
   </header>
-
-  <div class="search-bar">
-    <input type="text" placeholder="Search your style...">
-  </div>
-  <div class="category-links">
-    <a href="#">Men</a>
-    <a href="#">Women</a>
-    <a href="#">Kids</a>
-  </div>
 
   <section class="hero">
     <h1>Welcome to FA-Tshirt</h1>
@@ -210,6 +219,7 @@
   </section>
 
   <section class="products" id="products">
+    <!-- Same 3 products plus more for scrolling -->
     <div class="product">
       <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
       <div class="product-info">
@@ -234,20 +244,21 @@
         <button class="buy-btn" onclick="addToCart('Red Street Style')">Add to Cart</button>
       </div>
     </div>
+    <!-- More products for scroll -->
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1556905055-8f358a7a47b2?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
+      <img src="https://images.unsplash.com/photo-1564460576398-4aa08c88aa4e?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
       <div class="product-info">
-        <h3>Urban Style</h3>
-        <p>₹379</p>
-        <button class="buy-btn" onclick="addToCart('Urban Style')">Add to Cart</button>
+        <h3>Urban Gray</h3>
+        <p>₹329</p>
+        <button class="buy-btn" onclick="addToCart('Urban Gray')">Add to Cart</button>
       </div>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1520975910015-ecf1664f2b8f?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
+      <img src="https://images.unsplash.com/photo-1622470953274-16378bd1a7b3?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
       <div class="product-info">
-        <h3>Classic Blue Tee</h3>
-        <p>₹329</p>
-        <button class="buy-btn" onclick="addToCart('Classic Blue Tee')">Add to Cart</button>
+        <h3>Oversized Cool</h3>
+        <p>₹459</p>
+        <button class="buy-btn" onclick="addToCart('Oversized Cool')">Add to Cart</button>
       </div>
     </div>
   </section>
