--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
   <link href="https://fonts.googleapis.com/css2?family=Bahnschrift&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
+    @font-face {
+      font-family: 'Snap ITC';
+      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/12071/SNAP____.woff') format('woff');
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -22,7 +26,7 @@
 
     header {
       background-color: rgba(0, 0, 0, 0.8);
-      padding: 15px 30px;
+      padding: 10px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -30,6 +34,7 @@
       top: 0;
       z-index: 1000;
       animation: fadeDown 1s ease;
+      flex-wrap: wrap;
     }
 
     @keyframes fadeDown {
@@ -39,23 +44,55 @@
 
     .logo {
       font-size: 32px;
+      font-family: 'Snap ITC';
       font-weight: 700;
-      font-family: 'Snap ITC', cursive;
       color: #e63946;
-      text-shadow: 2px 2px 0 #000;
+      text-shadow: 2px 2px 5px #000;
     }
 
-    .nav-container {
+    .search-container {
+      width: 100%;
       display: flex;
-      align-items: center;
-      gap: 30px;
+      justify-content: center;
+      margin: 10px 0;
+    }
+
+    .search-container input {
+      padding: 10px;
+      width: 60%;
+      border-radius: 20px;
+      border: none;
+      outline: none;
+      font-size: 16px;
+    }
+
+    .nav-bottom {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 10px;
+    }
+
+    .nav-bottom a {
+      color: black;
+      background: white;
+      text-decoration: none;
+      padding: 8px 15px;
+      border-radius: 20px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .nav-bottom a:hover {
+      background-color: #ff6b6b;
+      color: white;
     }
 
     .nav-links {
       display: flex;
+      gap: 15px;
       align-items: center;
-      gap: 20px;
-      margin-right: 40px;
     }
 
     .nav-links a {
@@ -69,44 +106,9 @@
       color: #ff6b6b;
     }
 
-    .searchbar {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .searchbar input {
-      padding: 5px 10px;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      width: 200px;
-    }
-
-    .category-filters {
-      margin-top: 5px;
-      display: flex;
-      gap: 10px;
-    }
-
-    .category-filters span {
-      background-color: white;
-      color: black;
-      padding: 5px 10px;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .icons {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
     .hero {
       text-align: center;
-      padding: 100px 20px;
+      padding: 100px 20px 40px;
       background: rgba(0,0,0,0.5);
       animation: fadeUp 1s ease;
     }
@@ -119,6 +121,7 @@
     .hero h1 {
       font-size: 48px;
       margin-bottom: 20px;
+      font-family: 'Bahnschrift';
     }
 
     .hero p {
@@ -191,27 +194,25 @@
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
-    <div class="nav-container">
-      <nav class="nav-links">
-        <a href="#">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <div class="icons">
-        <a href="#login" style="color: white;"><i class="fas fa-user"></i> Login</a>
-        <a href="#cart" style="color: white;"><i class="fas fa-shopping-cart"></i></a>
-      </div>
-    </div>
-    <div class="searchbar">
-      <input type="text" placeholder="Search...">
-      <div class="category-filters">
-        <span>Men</span>
-        <span>Women</span>
-        <span>Kids</span>
-      </div>
+    <div class="nav-links">
+      <a href="#login">Login</a>
+      <a href="#cart">Cart</a>
     </div>
   </header>
+
+  <div class="search-container">
+    <input type="text" placeholder="Search for t-shirts...">
+  </div>
+
+  <div class="nav-bottom">
+    <a href="#men">Men</a>
+    <a href="#women">Women</a>
+    <a href="#kids">Kids</a>
+    <a href="#home">Home</a>
+    <a href="#products">Products</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div>
 
   <section class="hero">
     <h1>Welcome to FA-Tshirt</h1>
@@ -219,7 +220,6 @@
   </section>
 
   <section class="products" id="products">
-    <!-- Same 3 products plus more for scrolling -->
     <div class="product">
       <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
       <div class="product-info">
@@ -244,21 +244,20 @@
         <button class="buy-btn" onclick="addToCart('Red Street Style')">Add to Cart</button>
       </div>
     </div>
-    <!-- More products for scroll -->
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1564460576398-4aa08c88aa4e?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
+      <img src="https://images.unsplash.com/photo-1521336575822-6da63fb45455?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
       <div class="product-info">
-        <h3>Urban Gray</h3>
+        <h3>Urban Blue Tee</h3>
         <p>₹329</p>
-        <button class="buy-btn" onclick="addToCart('Urban Gray')">Add to Cart</button>
+        <button class="buy-btn" onclick="addToCart('Urban Blue Tee')">Add to Cart</button>
       </div>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1622470953274-16378bd1a7b3?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
+      <img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
       <div class="product-info">
-        <h3>Oversized Cool</h3>
-        <p>₹459</p>
-        <button class="buy-btn" onclick="addToCart('Oversized Cool')">Add to Cart</button>
+        <h3>Classic Yellow</h3>
+        <p>₹289</p>
+        <button class="buy-btn" onclick="addToCart('Classic Yellow')">Add to Cart</button>
       </div>
     </div>
   </section>
